# Discord-LLama-Cpp

./: .gitignore  CMakeLists.txt  README.md  bot.cpp  test.cpp  test2.cpp
include/: llamatalk.hpp
src/: bot.cpp
